Fix descirptive metadata form translations

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -416,3 +416,224 @@ i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = ID
 i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID of the organisation responsible for preservation of a submitted package.
 IPContentType.RDBMS=Relational Database Management System
 IPContentType.SMURF=SMURF
+
+
+crosswalks.dissemination.html.ead.creator=Name(s) of the creator(s)
+crosswalks.dissemination.html.ead.producer=Producer
+crosswalks.dissemination.html.ead.publicationdate=Publication date
+crosswalks.dissemination.html.ead.custodialhistory=Custodial history
+crosswalks.dissemination.html.ead.acquisitioninformation=Immediate source of acquisition or transfer
+crosswalks.dissemination.html.ead.acquisitionnumber=Acquisition number
+crosswalks.dissemination.html.ead.acquistiondate=Acquisition date
+crosswalks.dissemination.html.ead.contentarea=Content and structure
+crosswalks.dissemination.html.ead.description=Scope and content
+crosswalks.dissemination.html.ead.accessarea=Conditions of access and use
+crosswalks.dissemination.html.ead.accessrestrictions=Conditions governing access
+crosswalks.dissemination.html.ead.languageScriptNotes=Language and script notes
+crosswalks.dissemination.html.ead.languages=Language of material
+crosswalks.dissemination.html.ead.phystech=Physical characteristics and technical requirements
+crosswalks.dissemination.html.ead.otherfindaids=Other finding aids
+crosswalks.dissemination.html.ead.alliedarea=Allied materials
+crosswalks.dissemination.html.ead.relatedmaterials=Related units of description
+crosswalks.dissemination.html.ead.oddarea=Other description metadata
+crosswalks.dissemination.html.ead.accesspointarea=Access points
+crosswalks.dissemination.html.ead.nameaccesspoint=Name access point
+crosswalks.dissemination.html.ead.subjectaccesspoint=Subject access point
+crosswalks.dissemination.html.ead.placeaccesspoint=Place access point
+crosswalks.dissemination.html.ead.descriptionidentifier=Description identifier
+crosswalks.dissemination.html.ead.institutionidentifier=Institution identifier
+crosswalks.dissemination.html.ead.rules=Rules or conventions
+crosswalks.dissemination.html.ead.statusdescription=Status of description
+crosswalks.dissemination.html.ead.levelofdetail=Level of detail
+crosswalks.dissemination.html.ead.processdates=Date of creation or revision
+crosswalks.dissemination.html.ead.sources=Sources
+crosswalks.dissemination.html.ead.archivistNotes=Archivist notes
+crosswalks.dissemination.html.ead.materialspecification=Material specific details
+crosswalks.dissemination.html.ead.physicaldescription=Physical description
+crosswalks.dissemination.html.ead.administrativeandbiographicalhistory=Administrative and biographical history
+crosswalks.dissemination.html.ead.facetorappearance=Facet or appearance
+crosswalks.dissemination.html.ead.quote=Quote
+crosswalks.dissemination.html.ead.level.fonds=Fonds
+crosswalks.dissemination.html.ead.level.class=Class
+crosswalks.dissemination.html.ead.level.collection=Collection
+crosswalks.dissemination.html.ead.level.recordgrp=Records group
+crosswalks.dissemination.html.ead.level.subgrp=Sub-group
+crosswalks.dissemination.html.ead.level.subfonds=Subfonds
+crosswalks.dissemination.html.ead.level.series=Series
+crosswalks.dissemination.html.ead.level.subseries=Sub-series
+crosswalks.dissemination.html.ead.level.file=File
+crosswalks.dissemination.html.ead.level.item=Item
+crosswalks.dissemination.html.ead.origination=Origination
+crosswalks.dissemination.html.ead.dateofinitialphysicaldescription=Date of initial physical description
+crosswalks.dissemination.html.ead.dateoffinalphysicaldescription=Date of final physical description
+crosswalks.dissemination.html.ead.materialspec=Material specification
+crosswalks.dissemination.html.ead.physfacet=Physical facet
+crosswalks.dissemination.html.ead.levelofdetail.full=Full
+crosswalks.dissemination.html.ead.levelofdetail.partial=Partial
+crosswalks.dissemination.html.ead.levelofdetail.minimal=Minimal
+crosswalks.dissemination.html.ead.statusdescription.final=Final
+crosswalks.dissemination.html.ead.statusdescription.revised=Revised
+crosswalks.dissemination.html.ead.statusdescription.draft=Draft
+crosswalks.dissemination.html.ead.identityarea=Identity
+crosswalks.dissemination.html.ead.level=Description level
+crosswalks.dissemination.html.ead.otherlevel=Other level
+crosswalks.dissemination.html.ead.reference=Reference code
+crosswalks.dissemination.html.ead.repositorycode=Repository code
+crosswalks.dissemination.html.ead.countrycode=Country code
+crosswalks.dissemination.html.ead.title=Title
+crosswalks.dissemination.html.ead.titletype=Title type
+crosswalks.dissemination.html.ead.repository=Repository
+crosswalks.dissemination.html.ead.initialdate=Initial date
+crosswalks.dissemination.html.ead.finaldate=Final date
+crosswalks.dissemination.html.ead.unitdate=Descriptive date
+crosswalks.dissemination.html.ead.dimensions=Dimensions and support
+crosswalks.dissemination.html.ead.extent=Extent
+crosswalks.dissemination.html.ead.contextarea=Context
+#crosswalks.dissemination.html.ead.author=Author
+crosswalks.dissemination.html.ead.bioghist=Biography or history
+crosswalks.dissemination.html.ead.geogname=Geographic name
+crosswalks.dissemination.html.ead.legalstatus=Legal status
+crosswalks.dissemination.html.ead.custodhist=Custodial history
+crosswalks.dissemination.html.ead.acqinfo=Acquisition information
+crosswalks.dissemination.html.ead.contentstructurearea=Content and structure
+crosswalks.dissemination.html.ead.scopecontent=Scope and content
+crosswalks.dissemination.html.ead.appraisal=Appraisal information
+crosswalks.dissemination.html.ead.accruals=Accruals
+crosswalks.dissemination.html.ead.arrangement=System of arrangement
+crosswalks.dissemination.html.ead.useaccessarea=Access and use
+crosswalks.dissemination.html.ead.accessrestrict=Access restrictions
+crosswalks.dissemination.html.ead.userestrict=Conditions governing use
+crosswalks.dissemination.html.ead.physloc=Physical location
+crosswalks.dissemination.html.ead.langmaterial=Language of the material
+crosswalks.dissemination.html.ead.alliedmaterialarea=Associated documentation
+crosswalks.dissemination.html.ead.originalsloc=Location of originals
+crosswalks.dissemination.html.ead.altformavail=Alternative form available
+crosswalks.dissemination.html.ead.bibliography=Publication notes
+crosswalks.dissemination.html.ead.notesarea=Notes
+crosswalks.dissemination.html.ead.notes=Notes
+crosswalks.dissemination.html.ead.descriptioncontrolarea=Description control
+crosswalks.dissemination.html.ead.processinfo=Arquivist notes
+crosswalks.dissemination.html.ead.level.AG=Aggregation
+crosswalks.dissemination.html.ead.level.C=Collection
+crosswalks.dissemination.html.ead.level.CL=Collection
+crosswalks.dissemination.html.ead.level.D=Item
+crosswalks.dissemination.html.ead.level.DC=File
+crosswalks.dissemination.html.ead.level.F=Fonds
+crosswalks.dissemination.html.ead.level.P=Producer
+crosswalks.dissemination.html.ead.level.SC=Section
+crosswalks.dissemination.html.ead.level.SCL=Subcollection
+crosswalks.dissemination.html.ead.level.SF=Subfonds
+crosswalks.dissemination.html.ead.level.SR=Series
+crosswalks.dissemination.html.ead.level.SSC=Subsection
+crosswalks.dissemination.html.ead.level.SSCL=Subsubcollection
+crosswalks.dissemination.html.ead.level.SSF=Subsubfonds
+crosswalks.dissemination.html.ead.level.SSR=Subseries
+crosswalks.dissemination.html.ead.level.SSSC=Subsubsection
+crosswalks.dissemination.html.ead.level.SSSR=Subsubseries
+crosswalks.dissemination.html.ead.level.SSUI=Subsubcontainers
+crosswalks.dissemination.html.ead.level.SUI=Subcontainer
+crosswalks.dissemination.html.ead.level.UI=Installation unit
+crosswalks.dissemination.html.ead.level.DS=Item
+
+
+crosswalks.dissemination.html.ead_3.title=Title
+crosswalks.dissemination.html.ead_3.titletype=Title type
+crosswalks.dissemination.html.ead_3.level=Level
+crosswalks.dissemination.html.ead_3.initialdate=Initial date
+crosswalks.dissemination.html.ead_3.finaldate=Final date
+crosswalks.dissemination.html.ead_3.repositorycode=Repository code
+crosswalks.dissemination.html.ead_3.reference=Reference
+crosswalks.dissemination.html.ead_3.acquisitionnumber=Acquisition number
+crosswalks.dissemination.html.ead_3.origination=Origination
+crosswalks.dissemination.html.ead_3.acquistiondate=Acquisition date
+crosswalks.dissemination.html.ead_3.materialspecification=Material specification
+crosswalks.dissemination.html.ead_3.physicaldescription=Physical description
+crosswalks.dissemination.html.ead_3.dateofinitialphysicaldescription=Date of initial physical description
+crosswalks.dissemination.html.ead_3.dateoffinalphysicaldescription=Date of final physical description
+crosswalks.dissemination.html.ead_3.dimensions=Dimensions
+crosswalks.dissemination.html.ead_3.facetorappearance=Facet or appearance
+crosswalks.dissemination.html.ead_3.extent=Extent
+crosswalks.dissemination.html.ead_3.languages=Languages
+crosswalks.dissemination.html.ead_3.quote=Quote
+crosswalks.dissemination.html.ead_3.administrativeandbiographicalhistory=Administrative and biographical history
+crosswalks.dissemination.html.ead_3.custodialhistory=Custodial history
+crosswalks.dissemination.html.ead_3.acquisitioninformation=Acquisition information
+crosswalks.dissemination.html.ead_3.description=Description
+crosswalks.dissemination.html.ead_3.organizationandordering=Organization and ordering
+crosswalks.dissemination.html.ead_3.appraisal=Appraisal
+crosswalks.dissemination.html.ead_3.accruals=Accruals
+crosswalks.dissemination.html.ead_3.physicalcharacteristicsandtechnicalrequirements=Physical characteristics and technical requirements
+crosswalks.dissemination.html.ead_3.accessrestrictions=Access restrictions
+crosswalks.dissemination.html.ead_3.altformavail=Alternative formats available
+crosswalks.dissemination.html.ead_3.reproductionrestrictions=Reproduction restrictions
+crosswalks.dissemination.html.ead_3.relatedmaterials=Related materials
+crosswalks.dissemination.html.ead_3.otherfindaids=Other find aids
+crosswalks.dissemination.html.ead_3.userestrict=Usage limitations
+crosswalks.dissemination.html.ead_3.notes=Notes
+crosswalks.dissemination.html.ead_3.originalsloc= Original locations
+crosswalks.dissemination.html.ead_3.bibliography=Bibliography
+crosswalks.dissemination.html.ead_3.unitdate=Date
+crosswalks.dissemination.html.ead_3.control.recordid=Identifier
+crosswalks.dissemination.html.ead_3.control.otherrecordid=Other identifier
+crosswalks.dissemination.html.ead_3.control.maintenancestatus=Maintenance status
+crosswalks.dissemination.html.ead_3.control.publicationstatus=Publication status
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.language=Language
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.script=Script
+crosswalks.dissemination.html.ead_3.control.filedesc.titlestmt=Title
+crosswalks.dissemination.html.ead_3.control.filedesc.publicationstmt=Publication
+crosswalks.dissemination.html.ead_3.control.maintenanceagency=Maintenance agency
+crosswalks.dissemination.html.ead_3.control=Control
+crosswalks.dissemination.html.ead_3.archdesc=Archival description
+crosswalks.dissemination.html.ead_3.control.titlestmt.titleproper=Title
+crosswalks.dissemination.html.ead_3.control.titlestmt.subtitle=Subtitle
+crosswalks.dissemination.html.ead_3.control.titlestmt.author=Author
+crosswalks.dissemination.html.ead_3.control.titlestmt.sponsor=Sponsor
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencycode=Agency code
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.otheragencycode=Other agency code
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencyname=Agency name
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.descriptivenote=Agency descriptive note
+
+crosswalks.dissemination.html.dc.title=Title
+crosswalks.dissemination.html.dc.description=Description
+crosswalks.dissemination.html.dc.contributor=Contributor
+crosswalks.dissemination.html.dc.coverage=Coverage
+crosswalks.dissemination.html.dc.creator=Creator
+crosswalks.dissemination.html.dc.date=Date
+crosswalks.dissemination.html.dc.date.initial=Initial date
+crosswalks.dissemination.html.dc.date.final=Final date
+crosswalks.dissemination.html.dc.format=Format
+crosswalks.dissemination.html.dc.identifier=Identifier
+crosswalks.dissemination.html.dc.language=Language
+crosswalks.dissemination.html.dc.publisher=Publisher
+crosswalks.dissemination.html.dc.relation=Relation
+crosswalks.dissemination.html.dc.rights=Rights
+crosswalks.dissemination.html.dc.source=Source
+crosswalks.dissemination.html.dc.subject=Subject
+crosswalks.dissemination.html.dc.type=Type
+
+crosswalks.dissemination.html.dc_simpledc20021212.title=Title
+crosswalks.dissemination.html.dc_simpledc20021212.description=Description
+crosswalks.dissemination.html.dc_simpledc20021212.contributor=Contributor
+crosswalks.dissemination.html.dc_simpledc20021212.coverage=Coverage
+crosswalks.dissemination.html.dc_simpledc20021212.creator=Creator
+crosswalks.dissemination.html.dc_simpledc20021212.date=Date
+crosswalks.dissemination.html.dc_simpledc20021212.date.initial=Initial date
+crosswalks.dissemination.html.dc_simpledc20021212.date.final=Final date
+crosswalks.dissemination.html.dc_simpledc20021212.format=Format
+crosswalks.dissemination.html.dc_simpledc20021212.identifier=Identifier
+crosswalks.dissemination.html.dc_simpledc20021212.language=Language
+crosswalks.dissemination.html.dc_simpledc20021212.publisher=Publisher
+crosswalks.dissemination.html.dc_simpledc20021212.relation=Relation
+crosswalks.dissemination.html.dc_simpledc20021212.rights=Rights
+crosswalks.dissemination.html.dc_simpledc20021212.source=Source
+crosswalks.dissemination.html.dc_simpledc20021212.subject=Subject
+crosswalks.dissemination.html.dc_simpledc20021212.type=Type
+
+crosswalks.dissemination.html.event.identifierType: Identifier type
+crosswalks.dissemination.html.event.identifierValue: Identifier value
+crosswalks.dissemination.html.event.dateTime: Date
+crosswalks.dissemination.html.event.outcome: Outcome
+crosswalks.dissemination.html.event.type: Type
+crosswalks.dissemination.html.event.detail: Detail
+crosswalks.dissemination.html.event.outcomeDetailNote: Note
+crosswalks.dissemination.html.event.outcomeDetailExtension: Extension
