--- a/.github/workflows/github-release-workflow.yml
+++ b/.github/workflows/github-release-workflow.yml
@@ -2,7 +2,7 @@ name: Github Release Workflow
 on:
   push:
     tags:
-      - "**"
+      - "[0-9]+.[0-9]+.[0-9]+"
     branches-ignore:
       - "**"
 jobs:
@@ -53,6 +53,8 @@ jobs:
         run: bash -c ".github/workflows/scripts/downloadJDK.sh"
         env:
           OS: ${{ matrix.os }}
+      - name: Setup pom version
+        run: mvn versions:set -DnewVersion=${{ github.ref_name }}
       - name: Build Jar
         run: mvn --batch-mode clean package
       - name: Build Linux
@@ -75,14 +77,11 @@ jobs:
             target/*.dmg
             target/*.exe
           retention-days: 1
-      - name: Get release version
-        id: tag
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/}
       - name: Release to GitHub
         uses: softprops/action-gh-release@v1
         with:
-          name: Version ${{ steps.tag.outputs.VERSION }}
-          tag_name: ${{ steps.tag.outputs.VERSION }}
+          name: Version ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
           draft: true
           files: |
             target/*.deb
@@ -98,7 +97,6 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     runs-on: ${{ matrix.os }}
-
 
     steps:
       - name: Checkout repository
@@ -139,6 +137,8 @@ jobs:
         run: bash -c ".github/workflows/scripts/downloadJDK.sh"
         env:
           OS: ${{ matrix.os }}
+      - name: Setup pom version
+        run: mvn versions:set -DnewVersion=${{ github.ref_name }}
       - name: Build Jar
         run: mvn --batch-mode clean package -P hu
       - name: Build Linux
@@ -160,14 +160,11 @@ jobs:
             target/*.dmg
             target/*.exe
           retention-days: 1
-      - name: Get release version
-        id: tag
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/}
       - name: Release to GitHub
         uses: softprops/action-gh-release@v1
         with:
-          name: Version ${{ steps.tag.outputs.VERSION }}
-          tag_name: ${{ steps.tag.outputs.VERSION }}
+          name: Version ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
           draft: true
           files: |
             target/*.deb
