--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: RODA-in
 description: Tool to create Submission Information Packages (SIP)
 author: KEEP SOLUTIONS
-show_downloads: true
+show_downloads: false
 
 
 
