--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.roda</groupId>
     <artifactId>rodain</artifactId>
-    <version>2.6.1</version>
+    <version>2.8.0</version>
 
     <prerequisites>
         <maven>3.0</maven>
@@ -13,10 +13,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <misc.version.java>11</misc.version.java>
+        <misc.version.java>21</misc.version.java>
         <projectLocalRepository>${project.basedir}/repository</projectLocalRepository>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
         <!-- plugins versions -->
         <plug.version.git-commit>2.2.2</plug.version.git-commit>
         <plug.version.surefire>2.19.1</plug.version.surefire>
@@ -29,9 +29,10 @@
         <plug.version.resources>3.0.2</plug.version.resources>
         <plug.version.site>3.6</plug.version.site>
         <!-- dependencies versions -->
-        <dep.version.commons-ip2>2.3.3</dep.version.commons-ip2>
+        <dep.version.javafx>21.0.6</dep.version.javafx>
+        <dep.version.commons-ip2>2.8.2</dep.version.commons-ip2>
         <dep.version.sf-test>4.0.6-alpha</dep.version.sf-test>
-        <dep.version.jackson>2.12.6.1</dep.version.jackson>
+        <dep.version.jackson>2.18.2</dep.version.jackson>
         <dep.version.slf4j>1.7.30</dep.version.slf4j>
         <dep.version.logback>1.2.9</dep.version.logback>
         <dep.version.richtextfx>0.9.3</dep.version.richtextfx>
@@ -436,12 +437,43 @@
             </build>
         </profile>
         <profile>
-            <id>build-macos</id>
+            <id>build-macos-x64</id>
             <properties>
                 <jar.id/>
             </properties>
             <build>
                 <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${plug.version.assembly}</version>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <finalName>rodain-app${jar.id}-${project.version}_OtherOS-x64</finalName>
+                                    <attach>true</attach>
+                                    <archive>
+                                        <manifest>
+                                            <addClasspath>true</addClasspath>
+                                            <classpathPrefix>lib/</classpathPrefix>
+                                            <mainClass>org.roda.rodain.Main</mainClass>
+                                        </manifest>
+                                    </archive>
+                                    <descriptorRefs>
+                                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                                    </descriptorRefs>
+                                    <descriptors>
+                                        <!--<descriptor>src/main/assembly/assembly-exclude-descriptor.xml</descriptor> -->
+                                    </descriptors>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>io.github.fvarrui</groupId>
                         <artifactId>javapackager</artifactId>
@@ -462,7 +494,7 @@
                                     <customizedJre>false</customizedJre>
                                     <generateInstaller>true</generateInstaller>
                                     <platform>mac</platform>
-                                    <runnableJar>target/rodain-app${jar.id}-${project.version}_OtherOS.jar</runnableJar>
+                                    <runnableJar>target/rodain-app${jar.id}-${project.version}_OtherOS-x64.jar</runnableJar>
                                     <additionalResources>
                                         <additionalResource>src/main/resources</additionalResource>
                                     </additionalResources>
@@ -470,7 +502,82 @@
                                     <macConfig>
                                         <appId>RODA-in${jar.id}</appId>
                                         <icnsFile>src/main/resources/RODA-in${jar.id}.icns</icnsFile>
-                                        <volumeName>RODA-in${jar.id}</volumeName>
+                                        <volumeName>RODA-in${jar.id}-x64</volumeName>
+                                    </macConfig>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>build-macos-arm64</id>
+            <properties>
+                <jar.id/>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${plug.version.assembly}</version>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <finalName>rodain-app${jar.id}-${project.version}_OtherOS-arm64</finalName>
+                                    <attach>true</attach>
+                                    <archive>
+                                        <manifest>
+                                            <addClasspath>true</addClasspath>
+                                            <classpathPrefix>lib/</classpathPrefix>
+                                            <mainClass>org.roda.rodain.Main</mainClass>
+                                        </manifest>
+                                    </archive>
+                                    <descriptorRefs>
+                                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                                    </descriptorRefs>
+                                    <descriptors>
+                                        <!--<descriptor>src/main/assembly/assembly-exclude-descriptor.xml</descriptor> -->
+                                    </descriptors>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>io.github.fvarrui</groupId>
+                        <artifactId>javapackager</artifactId>
+                        <version>1.7.6</version>
+                        <executions>
+                            <execution>
+                                <id>mac-bundler</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>package</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>org.roda.rodain.Main</mainClass>
+                                    <!-- optional -->
+                                    <name>RODA-in${jar.id}</name>
+                                    <displayName>RODA-in${jar.id}</displayName>
+                                    <bundleJre>true</bundleJre>
+                                    <customizedJre>false</customizedJre>
+                                    <generateInstaller>true</generateInstaller>
+                                    <platform>mac</platform>
+                                    <runnableJar>target/rodain-app${jar.id}-${project.version}_OtherOS-arm64.jar</runnableJar>
+                                    <additionalResources>
+                                        <additionalResource>src/main/resources</additionalResource>
+                                    </additionalResources>
+                                    <createZipball>true</createZipball>
+                                    <macConfig>
+                                        <appId>RODA-in${jar.id}</appId>
+                                        <icnsFile>src/main/resources/RODA-in${jar.id}.icns</icnsFile>
+                                        <volumeName>RODA-in${jar.id}-arm64</volumeName>
                                     </macConfig>
                                 </configuration>
                             </execution>
@@ -514,19 +621,19 @@
             <version>${dep.version.commons-ip2}</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0-b170201.1204</version>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.2</version>
         </dependency>
         <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1</version>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.4</version>
+            <version>4.0.5</version>
         </dependency>
 
         <dependency>
@@ -564,7 +671,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx</artifactId>
-            <version>11</version>
+            <version>${dep.version.javafx}</version>
             <type>pom</type>
         </dependency>
 
@@ -577,36 +684,36 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>11</version>
+            <version>${dep.version.javafx}</version>
         </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
-            <version>11</version>
+            <version>${dep.version.javafx}</version>
         </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
-            <version>11</version>
+            <version>${dep.version.javafx}</version>
         </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>11</version>
+            <version>${dep.version.javafx}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>11</version>
+            <version>${dep.version.javafx}</version>
         </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>11</version>
+            <version>${dep.version.javafx}</version>
         </dependency>
 
         <dependency>
@@ -642,7 +749,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
-            <version>1.4</version>
+            <version>1.13.0</version>
         </dependency>
     </dependencies>
 
