--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.roda</groupId>
     <artifactId>rodain</artifactId>
-    <version>2.8.0</version>
+    <version>2.8.1</version>
 
     <prerequisites>
         <maven>3.0</maven>
@@ -504,6 +504,7 @@
                                         <appId>RODA-in${jar.id}${macos_arch}</appId>
                                         <icnsFile>src/main/resources/RODA-in${jar.id}.icns</icnsFile>
                                         <volumeName>RODA-in${jar.id}-x64</volumeName>
+                                        <macStartup>UNIVERSAL</macStartup>
                                     </macConfig>
                                 </configuration>
                             </execution>
@@ -580,6 +581,7 @@
                                         <appId>RODA-in${jar.id}</appId>
                                         <icnsFile>src/main/resources/RODA-in${jar.id}.icns</icnsFile>
                                         <volumeName>RODA-in${jar.id}-arm64</volumeName>
+                                        <macStartup>UNIVERSAL</macStartup>
                                     </macConfig>
                                 </configuration>
                             </execution>
